--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://mmarichy.github.io/Accueil",
   "name": "portfolio-perso",
   "version": "0.1.0",
-  "homepage": "https://mmarichy.github.io/Portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
