fix image in json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mmarichy.github.io/Accueil",
+  "homepage": "https://mmarichy.github.io/Portfolio",
   "name": "portfolio-perso",
   "version": "0.1.0",
   "private": true,
